--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <p>Make the switch from cable. Get 75+ top channels on Hulu + Live TV with your favorite live sports, news,
                 and events - plus the entire Hulu streaming library. With Unlimited DVR, store Live TV recordings for up
                 to nine months and fast-forward through your DVR content. Access endless entertainment with Disney+ and
-                live sports with ESPN+. </p>   
-             <a href="#">VIEW CHANNELS IN YOUR AREA →</a>
+                live sports with ESPN+. </p>
+            <a href="#">VIEW CHANNELS IN YOUR AREA →</a>
         </div>
     </div>
     <div class="news">
@@ -106,18 +106,238 @@
                 <div class="icon"></div>
                 <div class="icon"></div>
             </div>
-            <p class="pTmc">Live TV plan required. Regional restrictions, blackouts and additional terms apply. <a href="#"> See details</a></p>
+            <p class="pTmc">Live TV plan required. Regional restrictions, blackouts and additional terms apply. <a
+                    href="#"> See details</a></p>
         </div>
     </div>
     <div class="plan">
-<div class="planText">
-    <h1>Select Your Plan</h1>
-    <p>No hidden fees, equipment rentals, or installation appointments.</p>
-    <h2>
-        Switch plans or cancel anytime.^^
-    </h2>
-</div>
+        <div class="planText">
+            <h1>Select Your Plan</h1>
+            <p>No hidden fees, equipment rentals, or installation appointments.</p>
+            <h2>
+                Switch plans or cancel anytime.**
+            </h2>
+            <div class="line"></div>
+            <div class="rate">
+                <div class="price">
+                    <div class="price1">
+                        <div class="a">
+                            <p>BASE PLANS</p>
+                            <svg viewBox="0 -2 61 24" height="24" width="61" role="img" aria-labelledby="logoTitle"
+                                fill="rgb(39, 44, 53)">
+                                <title id="logoTitle">hulu</title>
+                                <path
+                                    d="M9.57046613 6.24096927h-3.1015504c-1.0875017 0-1.63435327.29263768-1.63435327.29263768V0H0v20h4.83456246v-8.0704467c0-.7137436.58067743-1.29171 1.2958127-1.29171h2.81374862c.7162628 0 1.29524892.5779664 1.29524892 1.29171V20h4.8359719v-8.6950777c0-3.65670596-2.4444829-5.06395303-5.50487847-5.06395303zm46.48012787 0v8.06932223c0 .714868-.579268 1.2931156-1.294967 1.2931156h-2.8134668c-.7162628 0-1.2952489-.5782476-1.2952489-1.2931156V6.24096927h-4.8368175V14.712844c0 3.4627386 2.2220777 5.287156 5.5062878 5.287156h4.7347762v-.0247379c3.0245965 0 4.8354081-2.1465718 4.8354081-5.2624181V6.24096927H56.050594zM28.7728487 14.3102915c0 .714868-.5798318 1.2931156-1.2955308 1.2931156h-2.8137486c-.7162628 0-1.2955308-.5782476-1.2955308-1.2931156V6.24096927h-4.8359719V14.712844c0 3.4627386 2.2220778 5.287156 5.506006 5.287156h4.7347761v-.0247379c3.0248785 0 4.8359719-2.1465718 4.8359719-5.2624181V6.24096927h-4.8359719v8.06932223zM37.294431 20h4.8365357V0H37.294431v20z"
+                                    fill-rule="evenodd"></path>
+                            </svg>
+                        </div>
+                        <button class="on-btn">btn</button>
+                        <div class="b">
+                            <p>BUNDLE / SAVE</p>
+                            <img src="./icons.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="price2">
+                        <div class="c">
+                            <div class="">MOST POPULAR</div>
+                            <p>30 DAY FREE TRIAL</p>
+                            <h4>Hulu (With Ads)</h4>
+                            <button>$7.99 / MONTH</button>
+                        </div>
+                        <div class="d">
+                            <li class="invisibal-black">.</li>
+                            <p>30 DAY FREE TRIAL</p>
+                            <h4>Hulu (No Ads)</h4>
+                            <button>$14.99 / MONTH</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">Monthly price</p>
+                    <div class="text-a">
+                        <p class="text1">$7.99/mo.</p>
+                        <p class="text1">$14.99/mo.</p>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">Streaming Library with tons of TV episodes and movies</p>
+                    <div class="text-a">
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">Most new episodes the day after they air†</p>
+                    <div class="text-a">
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">Access to award-winning Hulu Originals
+                    </p>
+                    <div class="text-a">
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">Watch on your favorite devices, including TV, laptop, phone, or tablet
+                    </p>
+                    <div class="text-a">
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">Up to 6 user profiles</p>
+                    <div class="text-a">
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">Watch on 2 different screens at the same time
+                    </p>
+                    <div class="text-a">
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">No ads in streaming library</p>
+                    <div class="text-a">
+                        <div class="text1 tick"><i class="bi bi-dash-lg">--</i></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">Download and watch</p>
+                    <div class="text-a">
+                        <div class="text1 tick"><i class="bi bi-dash-lg">--</i></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <div class="text add-on">
+                        <p class="text-p">†For current-season shows in the streaming library only
+                            **Switches from Live TV to Hulu take effect as of the next billing cycle</p>
+                        <h1>Available Add-ons</h1>
+                        <p>Add-ons available at an additional cost.
+                            Add them up after you sign up for Hulu.</p>
+                    </div>
+                    <div class="text1 tick"></div>
+                    <div class="text1 tick"></div>
+
+                </div>
+                <div class="table">
+                    <p class="text">HBO Max™</p>
+                    <div class="text-a">
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">CINEMAX</p>
+                    <div class="text-a">
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">SHOWTIME</p>
+                    <div class="text-a">
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class="text">STARZ</p>
+                    <div class="text-a">
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                        <div class="text1 tick"><img src="./tick.svg" alt=""></div>
+                    </div>
+                </div>
+                <div class="table">
+                    <p class=" hide-baar">Hide Add-ons</p>
+                </div>
+            </div>
+        </div>
     </div>
+    <footer>
+        <div class="f1">
+            <ul>
+                <li>BROWSE</li>
+                <li>Streaming Library</li>
+                <li>Live TV</li>
+                <li>Live News</li>
+                <li>Live Sports</li>
+                <li></li>
+                <li></li>
+            </ul>
+            <ul>
+                <li class="invisibal-white">.</li>
+                <li>TV Shows</li>
+                <li>Movies</li>
+                <li>Originals</li>
+                <li>Networks</li>
+                <li>Kids</li>
+                <li>FX</li>
+            </ul>
+            <ul>
+                <li class="invisibal-white">.</li>
+                <li>HBO Max™</li>
+                <li>Cinemax</li>
+                <li>Showtime</li>
+                <li>STARZ</li>
+                <li class="invisibal-white">.</li>
+                <li class="invisibal-white">.</li>
+            </ul>
+            <ul>
+                <li class="invisibal-white">.</li>
+                <li>Disney Bundle Trio <br> Basic</li>
+                <li>Disney Bundle Trio <br> Premium</li>
+                <li>Student Discount</li>
+                <li class="invisibal-white">.</li>
+                <li class="invisibal-white">.</li>
+                <li class="invisibal-white">.</li>
+            </ul>
+            <ul>
+                <li>HELP</li>
+                <li>Account & Billing</li>
+                <li>Plans & Pricing</li>
+                <li>Supported <br> Devices</li>
+                <li>Accessibility</li>
+                <li class="invisibal-white">.</li>
+                <li class="invisibal-white">.</li>
+            </ul>
+            <ul>
+                <li>ABOUT US</li>
+                <li>Shop Hulu</li>
+                <li>Press</li>
+                <li>Jobs</li>
+                <li>Contact</li>
+                <li class="invisibal-white">.</li>
+                <li class="invisibal-white">.</li>
+            </ul>
+        </div>
+        <div class="social">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-youtube"></i>
+            <i class="bi bi-instagram"></i>
+        </div>
+        <ul class="end">
+            <li>© 2022 Hulu, LLC</li>
+            <li>Evidon AdChoicesAbout Ads</li>
+            <li>Terms of Use</li>
+            <li>Privacy Policy</li>
+            <li>Do Not Sell My Personal Information</li>
+            <li>Your California Privacy Rights</li>
+            <li>TV Parental Guidelines</li>
+            <li>Sitemap</li>
+        </ul>
+    </footer>
 </body>
 
 </html>
