--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hulu</title>
+    <title>Stream TV and Movie</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="icon" href="./hlogo.png">
 </head>
 
 <body>
@@ -101,10 +102,10 @@
             <H1>Biggest Events</H1>
             <p>Spectacular, can't-miss moments like the Olympics, Grammys®, Oscars®, Emmys®, and more.</p>
             <div>
-                <div class="icon"></div>
-                <div class="icon"></div>
-                <div class="icon"></div>
-                <div class="icon"></div>
+                <div class="icon"><img class="img1" src="./lo1.png" alt=""></div>
+                <div class="icon"><img class="img2" src="./lo2.png" alt=""></div>
+                <div class="icon"><img class="img3" src="./lo3.png" alt=""></div>
+                <div class="icon"><img class="img4" src="./lo4.png" alt=""></div>
             </div>
             <p class="pTmc">Live TV plan required. Regional restrictions, blackouts and additional terms apply. <a
                     href="#"> See details</a></p>
